// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sould require dirA files 1`] = `
"const foo =
/*!@compileDependencies([\\"./dirA/\\"])*/
function () {
  const map = Object.defineProperties({}, {
    \\"hello.js\\": {
      value: require(\\"fixtures/dirA/hello.js\\"),
      enumerable: true
    }
  });

  const returnContext = function (item) {
    return map[item];
  };

  returnContext.keys = function () {
    return Object.keys(map);
  };

  return returnContext;
}();"
`;

exports[`sould require root project dirs 1`] = `
"const foo =
/*!@compileDependencies([\\".//\\"])*/
function () {
  const map = Object.defineProperties({}, {
    \\"dirA\\": {
      value: require(\\"fixtures/dirA\\"),
      enumerable: true
    },
    \\"testA.js\\": {
      value: require(\\"fixtures/testA.js\\"),
      enumerable: true
    },
    \\"testB.js\\": {
      value: require(\\"fixtures/testB.js\\"),
      enumerable: true
    }
  });

  const returnContext = function (item) {
    return map[item];
  };

  returnContext.keys = function () {
    return Object.keys(map);
  };

  return returnContext;
}();"
`;
